--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT=5000
 MONGODB_URI=mongodb://127.0.0.1:27017/by-secret
 JWT_SECRET=your_secret_here
+FRONTEND_URL=http://localhost:5173
