--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-JWT_SECRET=your_secret_here
-MONGODB_URI=your_mongo_uri_here
-PORT=5000
 NODE_ENV=development
+PORT=5000
+MONGODB_URI=mongodb://127.0.0.1:27017/by-secret
+JWT_SECRET=your_secret_here
+FRONTEND_URL=http://localhost:5173
