--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
 MONGODB_URI=mongodb://127.0.0.1:27017/by-secret
-JWT_SECRET=your_secret_here
-FRONTEND_URL=http://localhost:5173
+JWT_SECRET=your_production_secret
+FRONTEND_URL=http://137.184.200.52
