--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
   "dependencies": {
     "apollo-server-express": "^3.13.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "graphql": "^16.10.0",
     "jose": "^6.0.10",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.1",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.14",
     "@types/node": "^22.13.10",
+    "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.9",
     "npm-force-resolutions": "^0.0.10",
     "ts-node": "^10.9.2",
