--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 CLOUDINARY_URL=cloudinary://your_api_key:your_api_secret@your_cloud_name
+
+STRIPE_TEST_SECRET_KEY=sk_test_xxxxxxxxxx
+STRIPE_LIVE_SECRET_KEY=sk_live_xxxxxxxxxx
