--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "graphql": "^16.10.0",
     "jose": "^6.0.10",
     "mongoose": "^8.12.1",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
